[package]
name = "bitcoind-tests"
version = "0.1.0"
authors = ["sanket1729 <sanket1729@gmail.com>", "Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
repository = "https://github.com/tcharding/bitcoind-tests"
description = "Integration tests for the crates in the rust-bitcoin organisation"
keywords = [ "bitcoin" ]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
miniscript = {version = "11.0.0", features = ["std"]}
bitcoind = { version = "0.35.1" }
bitcoin = { version = "0.31.2", features = ["rand-std"] }
internals = { package = "bitcoin-internals", version = "0.2.0", default_features = false }
