[package]
name = "bitcoind-tests"
version = "0.1.0"
authors = ["sanket1729 <sanket1729@gmail.com>", "Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
repository = "https://github.com/tcharding/bitcoind-tests"
description = "Integration tests for the crates in the rust-bitcoin organisation"
keywords = [ "bitcoin" ]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
miniscript = {version = "12.0.0", features = ["std"]}
bitcoind = { version = "0.36.0" }
bitcoin = { version = "0.32.0", features = ["rand-std"] }
internals = { package = "bitcoin-internals", version = "0.2.0", default_features = false }

[patch.crates-io.miniscript]
git = "https://github.com/tcharding/rust-miniscript"
branch = "05-01-release-12.0.0"

[patch.crates-io.bitcoind]
git = "https://github.com/tcharding/bitcoind"
branch = "05-01-upgrade-bitcoincore-rpc"

[patch.crates-io.bitcoincore-rpc]
git = "https://github.com/tcharding/rust-bitcoincore-rpc"
branch = "05-01-release-0.19.0"
